--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </div>
     <!--end video-->
     <!--start about-->
-    <div class="about">
+    <div class="about hi-poo-o">
       <div class="main-heading">
         <h2>about us</h2>
         <p>
